# SCEPTR

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  main.nf  nextflow.config  pyproject.toml  run_sceptr.sh  setup_databases.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  run-feedback.yml
.github/workflows/: integration-test.yml  test.yml
docs/: index.html
modules/: annotation.nf  comparison.nf  contamination.nf  interproscan.nf  qc.nf  salmon.nf  transdecoder.nf
modules/enrichment/: enrichment.nf
modules/explot/: __init__.py  categories  categorisation.py  continuous_enrichment.py  expression_profiling.nf  go_utils.py
modules/explot/cli/: cellular_profiling_cli.py  functional_profiling_cli.py  generate_report_cli.py
modules/explot/reporting/: comparison_report.py  html_report.py  interactive_report.py
modules/explot/visualisation/: bar_charts.py  comparison_charts.py  continuous_curves.py  radar_charts.py
modules/landscape/: landscape.nf  transcriptome_landscape.py
sceptr/: README.md  __init__.py  __main__.py  cli.py  continuous.py  enrichment.py  go_utils.py  io.py  profile.py
sceptr/categories/cellular/: cancer_cellular_categories.json  fungi_cellular_categories.json  parasite_protozoan_cellular_categories.json
sceptr/categories/functional/: bacteria_gram_positive_functional_categories.json  cancer_functional_categories.json  (+2 more)
scripts/: validate_category_keywords.py
tests/: run_smoke_test.py  test_core.py  test_interproscan_integration.nf
tests/data/: generate_smoke_dataset.py  smoke_expression.tsv
(+27 files in other folders)
