[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sceptr-profiling"
version = "1.0.0"
description = "Statistical Characterisation of Expression Profiles in Transcriptomes"
readme = "sceptr/README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "James S. McCabe"},
]
keywords = [
    "transcriptomics",
    "functional profiling",
    "enrichment analysis",
    "expression gradient",
    "continuous enrichment",
    "single-sample",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "plotly>=5.0",
]

[project.optional-dependencies]
go = ["goatools>=1.2"]
plots = ["matplotlib>=3.5"]
all = ["goatools>=1.2", "matplotlib>=3.5"]

[project.scripts]
sceptr = "sceptr.cli:main"

[project.urls]
Homepage = "https://github.com/jsmccabe1/SCEPTR"
Repository = "https://github.com/jsmccabe1/SCEPTR"

[tool.setuptools.packages.find]
include = ["sceptr*"]

[tool.setuptools.package-data]
sceptr = ["categories/functional/*.json", "categories/cellular/*.json"]
